add animation to service cards and fixed bugs

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <span class="nav-text text-lg flex-1">About</span>
             </a>
             
-            <a href="#services" class="nav-item flex items-center justify-center w-48 space-x-4 p-3 rounded-lg hover:bg-[#181818] transition-all duration-200">
+            <a href="#services" onclick="scrollToSection('services'); return false;" class="nav-item flex items-center justify-center w-48 space-x-4 p-3 rounded-lg hover:bg-[#181818] transition-all duration-200">
                 <i class="fas fa-cogs w-8 text-xl text-center"></i>
                 <span class="nav-text text-lg flex-1">Services</span>
             </a>
@@ -267,7 +267,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- UI/UX Design -->
                 <div class="service-card bg-black/20 backdrop-blur-sm rounded-2xl p-8 border border-[#04d9ff]/10 
-                    group hover:border-[#04d9ff]/30 transition-all duration-300 fade-in-up delay-1
+                    group hover:border-[#04d9ff]/30 transition-all duration-300
                     relative overflow-hidden">
                     <div class="absolute top-0 right-0 w-32 h-32 bg-[#04d9ff]/5 rounded-bl-full -z-10"></div>
                     <div class="text-[#04d9ff] mb-6 text-4xl service-icon">
@@ -295,7 +295,7 @@
 
                 <!-- Frontend Development -->
                 <div class="service-card bg-black/20 backdrop-blur-sm rounded-2xl p-8 border border-[#04d9ff]/10 
-                    group hover:border-[#04d9ff]/30 transition-all duration-300 fade-in-up delay-2
+                    group hover:border-[#04d9ff]/30 transition-all duration-300
                     relative overflow-hidden">
                     <div class="absolute top-0 right-0 w-32 h-32 bg-[#04d9ff]/5 rounded-bl-full -z-10"></div>
                     <div class="text-[#04d9ff] mb-6 text-4xl service-icon">
@@ -323,7 +323,7 @@
 
                 <!-- WordPress Development -->
                 <div class="service-card bg-black/20 backdrop-blur-sm rounded-2xl p-8 border border-[#04d9ff]/10 
-                    group hover:border-[#04d9ff]/30 transition-all duration-300 fade-in-up delay-3
+                    group hover:border-[#04d9ff]/30 transition-all duration-300
                     relative overflow-hidden">
                     <div class="absolute top-0 right-0 w-32 h-32 bg-[#04d9ff]/5 rounded-bl-full -z-10"></div>
                     <div class="text-[#04d9ff] mb-6 text-4xl service-icon">
