enchance security features and made some adjustments

--- a/index.html
+++ b/index.html
@@ -3,8 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Navigation Panel</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Professional Frontend Developer & UI/UX Designer with over 2 years of experience. Specializing in responsive web design, WordPress development, and modern web applications.">
+    <meta name="keywords" content="frontend developer, web developer, UI/UX designer, WordPress developer, Sri Lanka, web design, responsive design, CodeXBlaze, ygcodeblaze">
+    <meta name="author" content="Yasiru Isum Geenula">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://codexblaze.netlify.app/">
+    <meta property="og:title" content="CodeXBlaze">
+    <meta property="og:description" content="Professional Frontend Developer & UI/UX Designer with over 2 years of experience. Specializing in responsive web design, WordPress development, and modern web applications.">
+    <meta property="og:image" content="https://your-website-url.com/images/og-image.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://codexblaze.netlify.app/">
+    <meta property="twitter:title" content="Yasiru Isum Geenula - Frontend Developer & UI/UX Designer">
+    <meta property="twitter:description" content="Professional Frontend Developer & UI/UX Designer with over 2 years of experience. Specializing in responsive web design, WordPress development, and modern web applications.">
+    <meta property="twitter:image" content="https://your-website-url.com/images/og-image.jpg">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="images/Favicon/FavIcon32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/Favicon/FavIcon16x16.png">
+
+    <!-- Update your title tag -->
+    <title>Crafting Digital Destinations</title>
+
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
@@ -732,6 +758,9 @@
                         </li>
                         <li>
                             <a href="#about" class="hover:text-[#04d9ff] transition-colors">About</a>
+                        </li>
+                        <li>
+                            <a href="#services" class="hover:text-[#04d9ff] transition-colors">Services</a>
                         </li>
                         <li>
                             <a href="#portfolio" class="hover:text-[#04d9ff] transition-colors">Portfolio</a>
