made porfolio page

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     </h3>
                     
                     <p class="text-[var(--text-secondary)] text-base sm:text-lg max-w-3xl mx-auto leading-relaxed">
-                        I'm a passionate frontend developer with over 2 years of experience crafting beautiful and functional web experiences. My approach combines clean code with creative design solutions to build engaging user interfaces.
+                        I'm a passionate frontend developer with over 1 years of experience crafting beautiful and functional web experiences. My approach combines clean code with creative design solutions to build engaging user interfaces.
                     </p>
                 </div>
 
@@ -448,7 +448,7 @@
                                 flex items-end justify-between p-4">
                                 <div>
                                     <h4 class="text-white font-semibold">E-Commerce Website</h4>
-                                    <p class="text-[#04d9ff] text-sm">Web Development</p>
+                                    <p class="text-[#04d9ff] text-sm">Frontend Development</p>
                                 </div>
                                 <a href="https://teckybuilds.netlify.app/" target="_blank" class="text-white bg-[#04d9ff] w-10 h-10 flex items-center justify-center rounded-full transform -translate-y-10 group-hover:translate-y-0 transition-transform duration-300 hover:bg-[#03c3e6]">
                                     <i class="fas fa-external-link-alt text-sm"></i>
@@ -489,7 +489,7 @@
                                 flex items-end justify-between p-4">
                                 <div>
                                     <h4 class="text-white font-semibold">Service Website</h4>
-                                    <p class="text-[#04d9ff] text-sm">Web Development</p>
+                                    <p class="text-[#04d9ff] text-sm">Frontend Development</p>
                                 </div>
                                 <a href="https://glamour-haven.netlify.app/" target="_blank" class="text-white bg-[#04d9ff] w-10 h-10 flex items-center justify-center rounded-full transform -translate-y-10 group-hover:translate-y-0 transition-transform duration-300 hover:bg-[#03c3e6]">
                                     <i class="fas fa-external-link-alt text-sm"></i>
@@ -530,7 +530,7 @@
                                 flex items-end justify-between p-4">
                                 <div>
                                     <h4 class="text-white font-semibold">Portfolio Website</h4>
-                                    <p class="text-[#04d9ff] text-sm">Web Development</p>
+                                    <p class="text-[#04d9ff] text-sm">Frontend Development</p>
                                 </div>
                                 <a href="https://gesitha.netlify.app/" target="_blank" class="text-white bg-[#04d9ff] w-10 h-10 flex items-center justify-center rounded-full transform -translate-y-10 group-hover:translate-y-0 transition-transform duration-300 hover:bg-[#03c3e6]">
                                     <i class="fas fa-external-link-alt text-sm"></i>
@@ -563,7 +563,7 @@
 
             <!-- View All Projects Button -->
             <div class="text-center mt-12 fade-in-up delay-4">
-                <a href="/projects" class="inline-flex items-center gap-2 px-8 py-3 rounded-xl bg-gradient-to-r from-[#04d9ff] to-[#03c3e6] 
+                <a href="portfolio.html" class="inline-flex items-center gap-2 px-8 py-3 rounded-xl bg-gradient-to-r from-[#04d9ff] to-[#03c3e6] 
                     text-white font-semibold hover:shadow-lg hover:shadow-[#04d9ff]/20 transition-all duration-300 
                     transform hover:-translate-y-1">
                     View All Projects
@@ -763,7 +763,7 @@
                             <a href="#services" class="hover:text-[#04d9ff] transition-colors">Services</a>
                         </li>
                         <li>
-                            <a href="#portfolio" class="hover:text-[#04d9ff] transition-colors">Portfolio</a>
+                            <a href="portfolio.html" class="hover:text-[#04d9ff] transition-colors">Portfolio</a>
                         </li>
                         <li>
                             <a href="#contact" class="hover:text-[#04d9ff] transition-colors">Contact</a>
