--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
         <div class="space-y-6 flex flex-col items-center flex-1 justify-center -mt-20">
             <!-- Logo moved inside -->
             <div class="mb-8">
-                <h1 class="text-4xl font-bold nav-logo">
+                <a href="index.html" class="text-4xl font-bold nav-logo">
                     <img src="images/Navbar-Logo-02.png" alt="Navbar-logo">  
-                </h1>
+                </a>
             </div>
 
             <a href="#home" onclick="scrollToSection('home'); return false;" class="nav-item flex items-center justify-center w-48 space-x-4 p-3 rounded-lg hover:bg-[#181818] transition-all duration-200">
@@ -256,11 +256,14 @@
                             </div>
                             <!-- Button container with responsive classes -->
                             <div class="flex flex-col sm:flex-row gap-4 mt-6">
-                                <button class="w-full sm:flex-1 py-3 px-6 rounded-xl bg-gradient-to-r from-[#04d9ff] to-[#03c3e6] 
-                                    text-white font-semibold hover:shadow-lg hover:shadow-[#04d9ff]/20 transition-all duration-300 
-                                    transform hover:-translate-y-1">
-                                    Download CV
-                                </button>
+                                <a href="images/CV.pdf" 
+                                   download="Yasiru_Isum_CV.pdf"
+                                   class="bg-[#04d9ff] text-white px-5 py-2.5 sm:px-6 sm:py-3 lg:px-8 lg:py-4 
+                                          rounded-full hover:bg-[#03c3e6] transition-all duration-300 
+                                          text-base sm:text-lg inline-flex items-center gap-2">
+                                    <span>Download CV</span>
+                                    <i class="fas fa-download"></i>
+                                </a>
                                 <button onclick="openProfilePopup()" class="w-full sm:flex-1 py-3 px-6 rounded-xl border-2 border-[#04d9ff] text-[#04d9ff]
                                     font-semibold hover:bg-[#04d9ff] hover:text-white transition-all duration-300 
                                     transform hover:-translate-y-1">
