--- a/portfolio.html
+++ b/portfolio.html
@@ -34,9 +34,9 @@
         <div class="space-y-6 flex flex-col items-center flex-1 justify-center -mt-20">
             <!-- Logo -->
             <div class="mb-8">
-                <h1 class="text-4xl font-bold nav-logo">
+                <a href="index.html" class="text-4xl font-bold nav-logo">
                     <img src="images/Navbar-Logo-02.png" alt="Navbar-logo">  
-                </h1>
+                </a>
             </div>
 
             <!-- Navigation Links -->
