--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="images/Favicon/FavIcon16x16.png">
 
     <!-- Update your title tag -->
-    <title>Crafting Digital Destinations</title>
+    <title>CodeXBlaze</title>
 
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -236,7 +236,7 @@
                                 <div class="space-y-4">
                                     <div>
                                         <p class="text-[#04d9ff] text-sm font-semibold">Experience</p>
-                                        <p class="font-medium">2+ Years</p>
+                                        <p class="font-medium">1+ Years</p>
                                     </div>
                                     <div>
                                         <p class="text-[#04d9ff] text-sm font-semibold">Freelance</p>
@@ -812,5 +812,15 @@
             </div>
         </div>
     </footer>
+
+    <!-- ========================= Development Notice ========================= -->
+    <!-- Development Notice -->
+    <div class="dev-notice">
+        <div class="dev-notice-content">
+            <i class="fas fa-wrench dev-notice-icon"></i>
+            <span>This website is currently in active development. Some features may be under optimization.</span>
+        </div>
+    </div>
+    <!-- ========================= Development Notice ========================= -->
 </body>
 </html> 
