add splash screen

--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- Add this right after the <body> tag -->
+    <div class="splash-screen">
+        <div class="splash-half left"></div>
+        <div class="splash-half right"></div>
+        <div class="splash-logo"></div>
+    </div>
+
     <!-- Mobile Controls -->
     <div class="lg:hidden fixed top-0 w-full z-50">
         <div class="bg-[#0C1521] w-full py-3 px-4 shadow-lg flex justify-between items-center">
