--- a/index.html
+++ b/index.html
@@ -230,9 +230,12 @@
                             </div>
                             <div>
                                 <h5 class="text-[#04D9FF] mb-1">Freelance</h5>
-                                <p class="text-white flex items-center">
-                                    Currently Unavailable
-                                    <span class="w-2 h-2 bg-red-500 rounded-full ml-2"></span>
+                                <p class="text-white font-medium availability-status">
+                                    Unavailable
+                                    <span class="ml-1 inline-flex relative">
+                                        <span class="w-3 h-3 rounded-full status-dot"></span>
+                                        <span class="w-3 h-3 rounded-full absolute inset-0 status-dot-ping"></span>
+                                    </span>
                                 </p>
                             </div>
                             <div>
