--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <!-- Content Container -->
         <div class="container mx-auto flex flex-col lg:flex-row items-center justify-between max-w-6xl relative">
             <!-- Introduction Section -->
-            <div class="space-y-6 max-w-2xl text-center lg:text-left px-4 mt-24 lg:mt-0 scroll-animate fade-right">
+            <div class="space-y-6 max-w-2xl text-center lg:text-left px-4 mt-24 lg:mt-0 scroll-animate fade-left">
                 <h1 class="text-4xl lg:text-5xl font-bold leading-tight">
                     Hello, my name is 
                     <span class="text-[#00e5ff] block mt-2">Yasiru Isum Geenula</span>
@@ -100,7 +100,7 @@
             </div>
 
             <!-- Profile Image - Visible on all devices -->
-            <div class="relative mt-8 lg:mt-0 scroll-animate fade-left">
+            <div class="relative mt-8 lg:mt-0 scroll-animate fade-right">
                 <img src="images/ProPic.jpg" alt="Profile" class="w-96 h-[28rem] object-cover rounded-lg border-2 border-[#00e5ff]" loading="lazy">     
             </div>
         </div>
@@ -329,7 +329,7 @@
             <!-- Services Grid -->
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                 <!-- Frontend Development -->
-                <div class="bg-[#0a0a0a] p-8 rounded-2xl group hover:border-[#04D9FF] border border-transparent transition-all duration-300 scroll-animate fade-right">
+                <div class="bg-[#0a0a0a] p-8 rounded-2xl group hover:border-[#04D9FF] border border-transparent transition-all duration-300 scroll-animate fade-left">
                     <div class="text-[#04D9FF] text-4xl mb-6">
                         <i class="fas fa-laptop-code"></i>
                     </div>
@@ -518,7 +518,7 @@
             <!-- Contact Content -->
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 mx-0 sm:mx-0">
                 <!-- Contact Information -->
-                <div class="bg-[#0a0a0a] p-8 rounded-2xl group hover:border-[#04D9FF] border border-transparent transition-all duration-300 scroll-animate fade-right">
+                <div class="bg-[#0a0a0a] p-8 rounded-2xl group hover:border-[#04D9FF] border border-transparent transition-all duration-300 scroll-animate fade-up">
                     <h3 class="text-2xl font-bold text-white mb-8">Contact Information</h3>
 
                     <!-- Contact Details -->
@@ -578,7 +578,7 @@
                 </div>
 
                 <!-- Contact Form -->
-                <div class="bg-[#0a0a0a] p-8 rounded-2xl group hover:border-[#04D9FF] border border-transparent transition-all duration-300 scroll-animate fade-left">
+                <div class="bg-[#0a0a0a] p-8 rounded-2xl group hover:border-[#04D9FF] border border-transparent transition-all duration-300 scroll-animate fade-up">
                     <form class="space-y-6" action="https://api.web3forms.com/submit" method="POST">
                         <!-- Web3Forms Hidden Inputs -->
                         <input type="hidden" name="access_key" value="3c898db1-fb0e-4557-a8f7-1620a8d2f2e8">
