--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
 
             <!-- View All Projects Button -->
             <div class="text-center">
-                <a href="projects.html" class="inline-flex items-center bg-[#00e5ff] text-white px-8 py-3 rounded-full hover:bg-[#00c8ff] transition-all duration-300">
+                <a href="portfolio.html" class="inline-flex items-center bg-[#00e5ff] text-white px-8 py-3 rounded-full hover:bg-[#00c8ff] transition-all duration-300">
                     View All Projects
                     <i class="fas fa-arrow-right ml-2"></i>
                 </a>
