--- a/index.html
+++ b/index.html
@@ -409,12 +409,12 @@
 
                 <!-- Projects Grid -->
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                    <!-- TeckyBuilds Project -->
+                    <!-- GTA6 Release Project -->
                     <div class="bg-[#0a0a0a] rounded-2xl overflow-hidden group hover:border-[#04D9FF] border border-transparent transition-all duration-300 scroll-animate fade-up">
                         <div class="relative overflow-hidden">
-                            <img src="images/Project-imgs/proj-1.png" alt="TeckyBuilds" class="w-full h-48 object-cover transition-transform duration-500 group-hover:scale-110">
+                            <img src="images/Project-imgs/proj-5.jpg" alt="GTA6 Release" class="w-full h-48 object-cover transition-transform duration-500 group-hover:scale-110">
                             <!-- Updated Button -->
-                            <a href="https://teckybuilds.netlify.app/" target="_blank" 
+                            <a href="https://gta6release.online/" target="_blank" 
                                class="absolute top-3 right-3 z-10 w-10 h-10 bg-[#04D9FF]/90 rounded-full flex items-center justify-center 
                                       opacity-100 lg:opacity-0 lg:group-hover:opacity-100 
                                       transition-all duration-300 hover:scale-110">
@@ -422,11 +422,10 @@
                             </a>
                         </div>
                         <div class="p-6">
-                            <h4 class="text-xl font-bold mb-2">TeckyBuilds</h4>
+                            <h4 class="text-xl font-bold mb-2">GTA 6 Release</h4>
                             <p class="text-gray-300 text-sm mb-4">
-                                Modern e-commerce website <span class="text-[#00e5ff]">(Homepage Only)</span> for PC components 
-                                featuring a custom PC builder, product catalog, and service booking system. 
-                                Includes responsive design.
+                                GTA 6 release countdown website with a live timer, latest news updates, trailer embeds, and featured leaks. 
+                                Includes fan theories, interactive comment sections, and social sharing for hype-building.
                             </p>
                             <div class="flex gap-2">
                                 <span class="bg-[#111111] text-[#00e5ff] text-xs px-3 py-1 rounded-full">HTML</span>
