--- a/portfolio.html
+++ b/portfolio.html
@@ -46,6 +46,29 @@
 
         <!-- Projects Grid -->
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+            <!-- GTA6 Release Project -->
+            <div class="portfolio-item bg-[#0a0a0a] rounded-2xl overflow-hidden group hover:border-[#04D9FF] border border-transparent transition-all duration-300" data-category="frontend">
+                <div class="relative overflow-hidden">
+                    <img src="images/Project-imgs/proj-5.jpg" alt="GTA6 Release" class="w-full h-48 object-cover transition-transform duration-500 group-hover:scale-110">
+                    <a href="https://gta6release.online/" target="_blank" 
+                        class="absolute top-3 right-3 z-10 w-10 h-10 bg-[#04D9FF]/90 rounded-full flex items-center justify-center 
+                            opacity-100 lg:opacity-0 lg:group-hover:opacity-100 
+                            transition-all duration-300 hover:scale-110">
+                        <i class="fa-solid fa-arrow-up-right-from-square text-white text-lg"></i>
+                    </a>
+                </div>
+                <div class="p-6">
+                    <h3 class="text-xl font-bold text-white mb-2">GTA6 Release</h3>
+                    <p class="text-gray-400 mb-4">GTA 6 release countdown website with a live timer, latest news updates, trailer embeds, and featured leaks. 
+                        Includes fan theories, interactive comment sections, and social sharing for hype-building.</p>
+                    <div class="flex flex-wrap gap-2">
+                        <span class="bg-[#04D9FF]/10 text-[#04D9FF] px-3 py-1 rounded-full text-sm">HTML</span>
+                        <span class="bg-[#04D9FF]/10 text-[#04D9FF] px-3 py-1 rounded-full text-sm">CSS</span>
+                        <span class="bg-[#04D9FF]/10 text-[#04D9FF] px-3 py-1 rounded-full text-sm">JavaScript</span>
+                    </div>
+                </div>
+            </div>
+            
             <!-- TeckyBuilds Project -->
             <div class="portfolio-item bg-[#0a0a0a] rounded-2xl overflow-hidden group hover:border-[#04D9FF] border border-transparent transition-all duration-300" data-category="frontend">
                 <div class="relative overflow-hidden">
