--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
             <div class="portfolio-item bg-[#0a0a0a] rounded-2xl overflow-hidden group hover:border-[#04D9FF] border border-transparent transition-all duration-300" data-category="frontend">
                 <div class="relative overflow-hidden">
                     <img src="images/Project-imgs/proj-5.jpg" alt="GTA6 Release" class="w-full h-48 object-cover transition-transform duration-500 group-hover:scale-110">
-                    <a href="https://gta6release.online/" target="_blank" 
+                    <a href="https://gta6release.netlify.app/" target="_blank" 
                         class="absolute top-3 right-3 z-10 w-10 h-10 bg-[#04D9FF]/90 rounded-full flex items-center justify-center 
                             opacity-100 lg:opacity-0 lg:group-hover:opacity-100 
                             transition-all duration-300 hover:scale-110">
