--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 
                     <!-- Buttons -->
                     <div class="flex gap-4 mt-8">
-                        <a href="images/CV.pdf" download class="bg-[#04D9FF] text-white px-6 py-3 rounded-lg hover:bg-[#04D9FF]/90 transition-all duration-300 text-center flex-1">
+                        <a href="images/CV_UPDATED_25END.pdf" download class="bg-[#04D9FF] text-white px-6 py-3 rounded-lg hover:bg-[#04D9FF]/90 transition-all duration-300 text-center flex-1">
                             Download CV <i class="fas fa-download ml-2"></i>
                         </a>
                         <button onclick="showHirePopup()" class="border-2 border-[#04D9FF] text-white px-6 py-3 rounded-lg hover:bg-[#04D9FF] transition-all duration-300 text-center flex-1">
